# ptk

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: commit-rules.md  roadmap.md
docs/superpowers/plans/: 2026-06-10-content-view-refactor.md
docs/superpowers/specs/: 2026-06-10-content-view-refactor-design.md
macos/: Package.swift  README.md
macos/Sources/PTK/: PTKMain.swift
macos/Sources/PTKApp/: AppRunner.swift  MenuBarController.swift  main.swift
macos/Sources/PTKApp/Notifications/: PortChangeNotificationCoordinator.swift  UserNotificationClient.swift
macos/Sources/PTKApp/ViewModels/: PortMonitorViewModel.swift
macos/Sources/PTKApp/Views/: AppTheme+ColorScheme.swift  (+11 more)
macos/Sources/PTKCore/: PTKCore.swift
macos/Tests/PTKAppTests/: MenuBarControllerTests.swift  PanelAccessibilityTests.swift  PortChangeNotificationAccessibilityTests.swift  PortChangeNotificationCoordinatorTests.swift  PortChangeNotificationIntegrationTests.swift  UserNotificationClientTests.swift
macos/Tests/PTKCoreTests/: ScaffoldTests.swift
scripts/: package-release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  portscan.rs
tests/: ci-workflow-readiness.sh  github-management-readiness.sh  open-source-readiness.sh  package-readiness.sh  release-readiness.sh
ui/: index.html  main.js  styles.css
(+39 files in other folders)
