[package]
name = "port-watch"
version = "0.2.0"
description = "Port status watcher built with Tauri"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
default-run = "port-watch"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
